gh-pages added n

--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "instagram-clone",
   "version": "0.1.0",
   "private": true,
-  "homepage": "http://Xerez.github.io/Instagran-clone",
+  "homepage": "https://x3rez.github.io/Instagram-clone/",
   "dependencies": {
     "@material-ui/core": "^4.11.0",
     "@material-ui/icons": "^4.9.1",
